# tmux-pilot

./: .gitignore  Justfile  LANDSCAPE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json
.git-sandbox/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index
.git-sandbox/info/: exclude
.git-sandbox/logs/: HEAD
.git-sandbox/logs/refs/heads/: main
.git-sandbox/logs/refs/heads/feat/: install-hooks-reap  profiles-and-ci
.git-sandbox/logs/refs/remotes/origin/: main
.git-sandbox/logs/refs/remotes/origin/feat/: install-hooks-reap
.git-sandbox/refs/heads/: main
.git-sandbox/refs/heads/feat/: profiles-and-ci
.git-sandbox/refs/remotes/origin/feat/: install-hooks-reap
.git-sandbox/worktrees/tp-profiles/: gitdir  index
.git-sandbox/worktrees/tp-profiles/logs/: HEAD
.github/workflows/: claude-code-review.yml  pages.yml  publish.yml  test.yml
docs/: README.md  cli-cookbook.md  getting-started.md  index.md  overview.md
docs/assets/stylesheets/: extra.css
docs/explanation/: file-backed-agent-state.md
docs/how-to/: convert-pathographs-to-cx2.md  create-sessions.md  persist-sessions-across-reboots.md  start-task-sessions-with-profiles-and-worktrees.md  wait-for-interactive-agents.md
docs/reference/: agent-state.md  cli-reference.md  python-api.md  session-creation.md
docs/tutorials/: drive-a-kept-alive-agent-session.md
examples/pathographs/: README.md
plugins/tmux-pilot/.claude-plugin/: plugin.json
plugins/tmux-pilot/skills/tmux-pilot/: SKILL.md
src/tmux_pilot/: __init__.py  agent_sessions.py  cli.py  core.py  display.py  hooks.py  pathograph_cli.py  reaper.py  worktree.py
src/tmux_pilot/pathograph_cx2/: __init__.py  main.py  style.py
src/tmux_pilot/plugins/: __init__.py
src/tmux_pilot/plugins/agents/: __init__.py  claude_code.py  codex.py  generic.py  pi.py
tests/: test_agent_plugins.py  test_agent_sessions.py  test_cli_reap.py  test_core.py  test_hooks.py  test_pathograph_cli.py  test_pathograph_cx2.py  test_profiles.py  test_reaper.py  test_send_keys_tmux.py  test_worktree.py
tests/fixtures/pathograph/: sample_pathograph.html  sample_pathograph.json
tests/support/: mock_claude_code_like.py  mock_codex_like.py
