[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmux-pilot"
version = "0.3.0"
description = "A thin, opinionated CLI for managing tmux sessions that run AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chris Mungall" },
]
keywords = ["tmux", "cli", "coding-agents", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.scripts]
tp = "tmux_pilot.cli:main"

[project.urls]
Homepage = "https://github.com/cmungall/tmux-pilot"
Repository = "https://github.com/cmungall/tmux-pilot"

[tool.pytest.ini_options]
testpaths = ["tests"]
