[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "tmux-pilot"
dynamic = ["version"]
description = "A thin, opinionated CLI for managing tmux sessions that run AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chris Mungall" },
]
keywords = ["tmux", "cli", "coding-agents", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.scripts]
tp = "tmux_pilot.cli:main"

[project.urls]
Homepage = "https://github.com/cmungall/tmux-pilot"
Repository = "https://github.com/cmungall/tmux-pilot"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "pymdown-extensions>=10.14.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.mypy]
python_version = "3.10"
packages = ["tmux_pilot"]

[tool.ruff]
line-length = 100
